--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 version: 2
-endpoint: http://localhost:8080
+endpoint: http://todo-hasura
 metadata_directory: metadata
 actions:
   kind: synchronous
-  handler_webhook_baseurl: http://localhost:3000
+  handler_webhook_baseurl: http://todo-hasura
